--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "read-excel-file": "^5.5.1"
   }
 }
