--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "path": "^0.12.7",
     "vite": "^3.1.0"
   },
   "dependencies": {
